# template-streamlit-docker

./: .dockerignore  .gitignore  Dockerfile  Pipfile  pyproject.toml
.streamlit/: config.toml
