[tool.poetry]
name = "sql"
version = "0.1.4"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
requests = "2.31.0"
streamlit = "1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
